[package]
name = "quote_client"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
rand =  "0.10.0-rc.5"
bincode = { version = "2.0.1", features = ["derive"] }
log = "0.4"
chrono = "0.4.42"
thiserror = "2.0.17"
strum = { version = "0.27", features = ["derive"] }